--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,11 @@
     margin: 3px;
     display: block;
 }
+.pagination-links{
+    margin:30px 0;
+}
+a.pagination-links{
+    padding:8px 13px;
+    margin: 5px;
+    background: #cdcdcd;
+    border: 1px #ccc solid;
