blog done in master

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,9 @@
 .pagination-links{
     margin:30px 0;
 }
-a.pagination-links{
-    padding:8px 13px;
+a.pagination-links {
+    padding: 8px 13px;
     margin: 5px;
     background: #cdcdcd;
     border: 1px #ccc solid;
+}
